--- a/package.json
+++ b/package.json
@@ -15,35 +15,35 @@
 		"lint": "prettier --check . && eslint ."
 	},
 	"devDependencies": {
-		"@eslint/compat": "^1.4.0",
-		"@eslint/js": "^9.38.0",
+		"@eslint/compat": "^1.4.1",
+		"@eslint/js": "^9.39.1",
 		"@sveltejs/adapter-cloudflare": "^7.2.4",
-		"@sveltejs/kit": "^2.47.1",
+		"@sveltejs/kit": "^2.48.4",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.19",
-		"@tailwindcss/vite": "^4.1.14",
-		"@types/node": "^22",
-		"daisyui": "^5.4.5",
-		"eslint": "^9.38.0",
+		"@tailwindcss/vite": "^4.1.17",
+		"@types/node": "^22.19.0",
+		"clsx": "^2.1.1",
+		"daisyui": "^5.4.7",
+		"eslint": "^9.39.1",
 		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-svelte": "^3.12.4",
-		"globals": "^16.4.0",
+		"eslint-plugin-svelte": "^3.13.0",
+		"globals": "^16.5.0",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.7.1",
-		"svelte": "^5.41.0",
+		"svelte": "^5.43.4",
 		"svelte-check": "^4.3.3",
 		"svoast": "^3.0.3",
-		"tailwindcss": "^4.1.14",
-		"tailwindcss-animate": "^1.0.7",
-		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.46.1",
-		"vite": "^7.1.10",
-		"tw-animate-css": "^1.4.0",
-		"vite-plugin-devtools-json": "^1.0.0",
 		"tailwind-merge": "^3.3.1",
-		"clsx": "^2.1.1"
+		"tailwindcss": "^4.1.17",
+		"tailwindcss-animate": "^1.0.7",
+		"tw-animate-css": "^1.4.0",
+		"typescript": "^5.9.3",
+		"typescript-eslint": "^8.46.3",
+		"vite": "^7.2.2",
+		"vite-plugin-devtools-json": "^1.0.0"
 	},
 	"dependencies": {
 		"@lucide/svelte": "^0.552.0",
