--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 	"dependencies": {
 		"@lucide/svelte": "^0.552.0",
 		"@tanstack/svelte-query": "^6.0.5",
+		"@types/culori": "^4.0.1",
 		"culori": "^4.0.2",
 		"tippy.js": "^6.3.7"
 	}
